- updated bias metrics -need to update and fix demo apps

--- a/test/demoApp/index.html
+++ b/test/demoApp/index.html
@@ -317,7 +317,8 @@
                         <button id="computeRepetitionBias" class="btn btn-primary" style="float: left;">Compute Repetition Metric</button>
                         <button id="computeAttributeWeightBias" class="btn btn-primary" style="float: right;">Compute Attribute Weight Metric</button>
                         <br>
-                        <button id="computeAllBias" class="btn btn-primary" style="float: center;">Compute All Metrics</button>
+                        <button id="computeScreenTimeBias" class="btn btn-primary" style="float: left;">Compute Screen Time Metric</button>
+                        <button id="computeAllBias" class="btn btn-primary" style="float: right;">Compute All Metrics</button>
                         <br>
                         <p>
                             Filename: <input type="text" id="downloadBiasFileName">
