data point coverage, data point distribution, and attribute coverage done so far

--- a/test/demoApp/index.html
+++ b/test/demoApp/index.html
@@ -310,10 +310,12 @@
                 </div>
                 <div id="collapseEight" class="panel-collapse collapse">
                     <div class="panel-body">
-                        <button id="computeSubsetBias" class="btn btn-primary">Subset Metric</button>
-                        <button id="computeVarianceBias" class="btn btn-primary">Variance Metric</button>
-                        <button id="computeRepetitionBias" class="btn btn-primary">Repetition Metric</button>
-                        <button id="computeAttributeWeightBias" class="btn btn-primary">Attribute Weight Metric</button>
+                        <button id="computeDataPointCoverage" class="btn btn-primary">Data Point Coverage</button>
+                        <button id="computeDataPointDistribution" class="btn btn-primary">Data Point Distribution</button>
+                        <button id="computeAttributeCoverage" class="btn btn-primary">Attribute Coverage</button>
+                        <button id="computeAttributeDistribution" class="btn btn-primary">Attribute Distribution</button>
+                        <button id="computeAttributeWeightCoverage" class="btn btn-primary">Attribute Weight Coverage</button>
+                        <button id="computeAttributeWeightDistribution" class="btn btn-primary">Attribute Weight Distribution</button>
                         <!-- <button id="computeScreenTimeBias" class="btn btn-primary">Screen Time Metric</button> -->
                         <br>
                         <button id="computeAllBias" class="btn btn-primary">Compute All Metrics</button>
