modularized namespace by ial.log, ial.usermodel, and ial.analytics

--- a/test/demoApp/index.html
+++ b/test/demoApp/index.html
@@ -180,7 +180,7 @@
                     <div id="collapseOneBody" class="panel-body">
                         <div align="right">
                             <button title="Update attribute weights" id="updateAttributeWeightBarsButton" class="btn btn-default"><span class="glyphicon glyphicon-indent-left"></span></button>
-                            <button title="Cancel updates" id="cancelAttributeWeightUpdates" class="btn btn-default"><span class="glyphicon glyphicon-align-justify"></span></button>
+                            <!--<button title="Cancel updates" id="cancelAttributeWeightUpdates" class="btn btn-default"><span class="glyphicon glyphicon-align-justify"></span></button>-->
                             <button title="Nullify attribute weights" id="nullifyAttributeWeightsButton" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></button>
                             <button title="Reset attribute weights" id="resetAttributeWeightsButton" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
                         </div>
@@ -206,9 +206,9 @@
                         </div>
                         <hr>
                         <!--<form>-->
-                        <button class="btn btn-primary" id="generateAndApplyWeightVectorButton">Update weight vector</button> using :
+                        <button class="btn btn-primary" id="generateAndApplyWeightVectorButton">Update weight vector</button><!-- using :
                         <input type="radio" id="useSimilaritiesForWeightVectorComputation" name="calcMode" value="sim" checked> Similarity
-                        <input type="radio" id="useDifferencesForWeightVectorComputation" name="calcMode" value="diff"> Differences
+                        <input type="radio" id="useDifferencesForWeightVectorComputation" name="calcMode" value="diff"> Differences-->
                         <!--</form>-->
                         <!--<button class="btn-default" id="generateWeightVectorButton">Get weight vector</button>-->
                     </div>
@@ -316,7 +316,6 @@
                         <button id="computeAttributeDistribution" class="btn btn-primary">Attribute Distribution</button>
                         <button id="computeAttributeWeightCoverage" class="btn btn-primary">Attribute Weight Coverage</button>
                         <button id="computeAttributeWeightDistribution" class="btn btn-primary">Attribute Weight Distribution</button>
-                        <!-- <button id="computeScreenTimeBias" class="btn btn-primary">Screen Time Metric</button> -->
                         <br>
                         <button id="computeAllBias" class="btn btn-primary">Compute All Metrics</button>
                         <br><br>
