added ial.log.log and fixed ability to separately get session logs for data items and attributes

--- a/test/demoApp/index.html
+++ b/test/demoApp/index.html
@@ -270,11 +270,11 @@
                         <button class="btn btn-default" id="groupClustersButton">Group clusters</button>
                         <button class="btn btn-default" id="colorByClusterButton">Color by clusters</button>
                     </div>
-                    <div class="panel-body">
+                    <!--<div class="panel-body">
                         <label>PCA (2-axis)</label>
                         <br/>
                         <button class="btn btn-primary" id="drawPCAButton">Apply PCA</button>
-                    </div>
+                    </div>--!>
                 </div>
             </div>
             <div class="panel panel-default" id="panel2">
@@ -299,7 +299,7 @@
                     </div>
                 </div>
             </div>
-            <div class="panel panel-default" id="panel8">
+            <!--<div class="panel panel-default" id="panel8">
                 <div class="panel-heading">
                     <h4 class="panel-title" align="center">
                         <p data-toggle="collapse" data-target="#collapseEight"
@@ -324,6 +324,24 @@
                             <button id="downloadBiasLogs" class="btn btn-primary">Download Logs</button>
                         </p>
                         <div id="biasResultsDiv"></div>
+                    </div>
+                </div>
+            </div>--!>
+        	<div class="panel panel-default" id="panel9">
+                <div class="panel-heading">
+                    <h4 class="panel-title" align="center">
+                        <p data-toggle="collapse" data-target="#collapseNine"
+                           class="collapsed" style="cursor: pointer;">
+                            <b>Logs</b>
+                        </p>
+                    </h4>
+                </div>
+                <div id="collapseNine" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <p>
+                            Filename: <input type="text" id="downloadLogFileName">
+                            <button id="downloadLogs" class="btn btn-primary">Download Logs</button>
+                        </p>
                     </div>
                 </div>
             </div>
