more tidying + demo updates

--- a/test/demoApp/index.html
+++ b/test/demoApp/index.html
@@ -327,7 +327,7 @@
                     </div>
                 </div>
             </div>--!>
-        	<div class="panel panel-default" id="panel9">
+        	<!--<div class="panel panel-default" id="panel9">
                 <div class="panel-heading">
                     <h4 class="panel-title" align="center">
                         <p data-toggle="collapse" data-target="#collapseNine"
@@ -344,7 +344,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>--!>
         </div>
     </div>
 </body>
