--- a/test/demoApp/index.html
+++ b/test/demoApp/index.html
@@ -179,10 +179,10 @@
                 <div id="collapseOne" class="panel-collapse collapse">
                     <div id="collapseOneBody" class="panel-body">
                         <div align="right">
-                            <button title="Update attribute weights" id="updateAttributeWeightBarsButton" class="btn btn-default"><span class="glyphicon glyphicon-indent-left"></span></button>
+                            <button title="Update Attribute Weights" id="updateAttributeWeightBarsButton" class="btn btn-default"><span class="glyphicon glyphicon-indent-left"></span></button>
                             <!--<button title="Cancel updates" id="cancelAttributeWeightUpdates" class="btn btn-default"><span class="glyphicon glyphicon-align-justify"></span></button>-->
-                            <button title="Nullify attribute weights" id="nullifyAttributeWeightsButton" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></button>
-                            <button title="Reset attribute weights" id="resetAttributeWeightsButton" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
+                            <button title="Nullify Attribute Weights" id="nullifyAttributeWeightsButton" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></button>
+                            <button title="Reset Attribute Weights" id="resetAttributeWeightsButton" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span></button>
                         </div>
                         <div id="attributeWeightDiv"></div>
                     </div>
@@ -193,7 +193,7 @@
                     <h4 class="panel-title" align="center">
                         <p data-toggle="collapse" data-target="#collapseSix"
                            class="collapsed" style="cursor: pointer;">
-                            <b>Cars of interest</b>
+                            <b>Cars of Interest</b>
                         </p>
                     </h4>
                 </div>
@@ -206,7 +206,7 @@
                         </div>
                         <hr>
                         <!--<form>-->
-                        <button class="btn btn-primary" id="generateAndApplyWeightVectorButton">Update weight vector</button><!-- using :
+                        <button class="btn btn-primary" id="generateAndApplyWeightVectorButton">Update Weight Vector</button><!-- using :
                         <input type="radio" id="useSimilaritiesForWeightVectorComputation" name="calcMode" value="sim" checked> Similarity
                         <input type="radio" id="useDifferencesForWeightVectorComputation" name="calcMode" value="diff"> Differences-->
                         <!--</form>-->
@@ -219,7 +219,7 @@
                     <h4 class="panel-title" align="center">
                         <p data-toggle="collapse" data-target="#collapseFive"
                            class="collapsed" style="cursor: pointer;">
-                            <b>Get similar cars</b>
+                            <b>Get Similar Cars</b>
                         </p>
                     </h4>
                 </div>
@@ -230,7 +230,7 @@
                             Selected Car: <b><span id="similarPointsFocusPoint"></span></b>
                         </div>
                         <select data-live-search="true" class="selectpicker" id="NSimilarPointsValue" data-width="80px"></select>
-                        <button id="getSimilarPoints" class="btn btn-primary">Get points</button>
+                        <button id="getSimilarPoints" class="btn btn-primary">Get Points</button>
                         <div id="similarPointsDiv"></div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                     <h4 class="panel-title" align="center">
                         <p data-toggle="collapse" data-target="#collapseFour"
                            class="collapsed" style="cursor: pointer;">
-                            <b>Top N cars</b>
+                            <b>Top N Cars</b>
                         </p>
                     </h4>
                 </div>
@@ -249,6 +249,7 @@
                         <label for="topNValue">Top :&nbsp;</label><select data-live-search="true" class="selectpicker" id="topNValue" data-width="80px"></select>
                         <button id="topNButton_ByWeight" class="btn btn-primary">Get points By Interaction Weights</button>
                         <button id="topNButton_ByScore" class="btn btn-primary">Get points By Item Scores</button>
+                        <button id="topNUpdateWeights" class="btn btn-primary">Update Weight Vector</button>
                         <div id="topNDiv"></div>
                     </div>
                 </div>
@@ -266,9 +267,9 @@
                     <div class="panel-body">
                         <label>KNN</label>
                         <br/>
-                        <button class="btn btn-primary" id="createClusterButton">Create clusters</button>
-                        <button class="btn btn-default" id="groupClustersButton">Group clusters</button>
-                        <button class="btn btn-default" id="colorByClusterButton">Color by clusters</button>
+                        <button class="btn btn-primary" id="createClusterButton">Create Clusters</button>
+                        <button class="btn btn-default" id="groupClustersButton">Group Clusters</button>
+                        <button class="btn btn-default" id="colorByClusterButton">Color by Clusters</button>
                     </div>
                     <!--<div class="panel-body">
                         <label>PCA (2-axis)</label>
@@ -291,7 +292,7 @@
                         <label for="clickslider">Click: </label>
                         <div id="clickslider"></div>
                         <hr>
-                        <label for="dblclickslider">Double click: </label>
+                        <label for="dblclickslider">Double Click: </label>
                         <div id="dblclickslider"></div>
                         <hr>
                         <label for="hoverslider">Hover: </label>
